@startuml

title __ADAPTER's Class Diagram__\n

  namespace com.yyzy.constellation {
    namespace news {
      namespace adapter {
        class com.yyzy.constellation.news.adapter.AddItemAdapter {
            - context : Context
            - mData : List<TypeBean>
            + AddItemAdapter()
            + getCount()
            + getItem()
            + getItemId()
            + getView()
        }
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace news {
      namespace adapter {
        class com.yyzy.constellation.news.adapter.NewsInfoAdapter {
            - context : Context
            - fragmentList : List<Fragment>
            - typeBeans : List<TypeBean>
            + NewsInfoAdapter()
            + getCount()
            + getItem()
            + getPageTitle()
        }
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace news {
      namespace adapter {
        class com.yyzy.constellation.news.adapter.NewsItemAdapter {
            - context : Context
            - imageLoader : ImageLoader
            - mData : List<DataBean>
            - options : DisplayImageOptions
            + NewsItemAdapter()
            + getCount()
            + getItem()
            + getItemId()
            + getView()
        }
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace news {
      namespace adapter {
        class com.yyzy.constellation.news.adapter.NewsItemAdapter.ViewHolder {
            ~ carOne : CardView
            ~ carThree : CardView
            ~ carTwo : CardView
            ~ imgOne : ImageView
            ~ imgThree : ImageView
            ~ imgTitle : ImageView
            ~ imgTwo : ImageView
            ~ tvSource : TextView
            ~ tvTime : TextView
            ~ tvTitle : TextView
            + ViewHolder()
        }
      }
    }
  }
  

  com.yyzy.constellation.news.adapter.AddItemAdapter -up-|> android.widget.BaseAdapter
  com.yyzy.constellation.news.adapter.NewsInfoAdapter -up-|> androidx.fragment.app.FragmentStatePagerAdapter
  com.yyzy.constellation.news.adapter.NewsItemAdapter -up-|> android.widget.BaseAdapter
  com.yyzy.constellation.news.adapter.NewsItemAdapter +-down- com.yyzy.constellation.news.adapter.NewsItemAdapter.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
